feat(PPP-74): Add new endpoint to PetController to getPet by PetId (#35)
* feat(PPP-74): Add new endpoint to PetController to getPet by PetId

* feat(PPP-74): Add new endpoint to PetController to getPet by PetId

* feat(PPP-74): Add new endpoint to PetController to getPet by PetId
